[gd_scene load_steps=17 format=3 uid="uid://b61rog7oe2n2k"]

[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/MenuOpciones.gd" id="1_lxtyl"]
[ext_resource type="Texture2D" uid="uid://nh5tq3k7n7fo" path="res://Assets/Sprites/Fondo.jpg" id="2_fn81d"]
[ext_resource type="FontFile" uid="uid://bdsrg5djj8r2y" path="res://Fonts/Kenney Mini.ttf" id="3_fecfv"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/OptionsLabel.gd" id="4_dtcfx"]
[ext_resource type="FontFile" uid="uid://c0dlpq3rk445s" path="res://Fonts/Kenney Mini Square.ttf" id="5_lb4i8"]
[ext_resource type="FontFile" uid="uid://vih3oix4tuqk" path="res://Fonts/Kenney Pixel.ttf" id="6_afom6"]
[ext_resource type="AudioStream" uid="uid://bo61mjl42advo" path="res://Assets/Sounds/Tuneles.mp3" id="7_jhupx"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/Master.gd" id="7_ub07u"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/Music.gd" id="8_jeota"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/SoundFX.gd" id="9_b1m41"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/Lab_Screen.gd" id="10_kqthh"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/FullScreen.gd" id="11_w6rb2"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/Borderless.gd" id="12_kfk1k"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/VSync.gd" id="13_fij2g"]
[ext_resource type="Script" path="res://Assets/Scenes/MenuOpciones/Scripts/Button.gd" id="15_4movy"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_arlll"]

[node name="MenuOpciones" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxtyl")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(585, 354)
scale = Vector2(1.166, 1.0305)
texture = ExtResource("2_fn81d")

[node name="Lab_Options" type="Label" parent="."]
layout_mode = 0
offset_left = 385.0
offset_top = 71.0
offset_right = 775.0
offset_bottom = 212.0
theme_override_fonts/font = ExtResource("3_fecfv")
theme_override_font_sizes/font_size = 100
text = "OPTIONS"
script = ExtResource("4_dtcfx")

[node name="Lab_Audio" type="Label" parent="Lab_Options"]
layout_mode = 0
offset_left = -204.0
offset_top = 161.0
offset_right = -21.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("5_lb4i8")
theme_override_font_sizes/font_size = 50
text = "AUDIO"

[node name="AudioBox" type="HBoxContainer" parent="Lab_Options"]
layout_mode = 0
offset_left = -206.0
offset_top = 113.0
offset_right = 112.0
offset_bottom = 457.0
alignment = 1

[node name="Labels" type="VBoxContainer" parent="Lab_Options/AudioBox"]
layout_mode = 2
alignment = 1

[node name="Master" type="Label" parent="Lab_Options/AudioBox/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_afom6")
theme_override_font_sizes/font_size = 28
text = "Master"
script = ExtResource("7_ub07u")

[node name="Music" type="Label" parent="Lab_Options/AudioBox/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_afom6")
theme_override_font_sizes/font_size = 28
text = "Music"
script = ExtResource("8_jeota")

[node name="SoundFX" type="Label" parent="Lab_Options/AudioBox/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_afom6")
theme_override_font_sizes/font_size = 28
text = "SoundFX"
horizontal_alignment = 1
script = ExtResource("9_b1m41")

[node name="VBoxContainer2" type="VBoxContainer" parent="Lab_Options/AudioBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Master" type="HSlider" parent="Lab_Options/AudioBox/VBoxContainer2"]
modulate = Color(0.679788, 0.547754, 9.62615e-07, 1)
material = SubResource("CanvasItemMaterial_arlll")
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Music" type="HSlider" parent="Lab_Options/AudioBox/VBoxContainer2"]
modulate = Color(0.679788, 0.547754, 9.62615e-07, 1)
material = SubResource("CanvasItemMaterial_arlll")
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="SoundFX" type="HSlider" parent="Lab_Options/AudioBox/VBoxContainer2"]
modulate = Color(0.679788, 0.547754, 9.62615e-07, 1)
material = SubResource("CanvasItemMaterial_arlll")
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Lab_Screen" type="Label" parent="Lab_Options"]
layout_mode = 0
offset_left = 339.0
offset_top = 153.0
offset_right = 525.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("5_lb4i8")
theme_override_font_sizes/font_size = 50
text = "SCREEN"
script = ExtResource("10_kqthh")

[node name="ScreenBox" type="HBoxContainer" parent="Lab_Options"]
layout_mode = 0
offset_left = 343.0
offset_top = 213.0
offset_right = 650.0
offset_bottom = 349.0

[node name="Labels" type="VBoxContainer" parent="Lab_Options/ScreenBox"]
layout_mode = 2
alignment = 1

[node name="FullScreen" type="Label" parent="Lab_Options/ScreenBox/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_afom6")
theme_override_font_sizes/font_size = 28
text = "FullScreen"
script = ExtResource("11_w6rb2")

[node name="Borderless" type="Label" parent="Lab_Options/ScreenBox/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_afom6")
theme_override_font_sizes/font_size = 28
text = "Borderless"
script = ExtResource("12_kfk1k")

[node name="VSync" type="Label" parent="Lab_Options/ScreenBox/Labels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_afom6")
theme_override_font_sizes/font_size = 28
text = "VSync"
script = ExtResource("13_fij2g")

[node name="Checks" type="VBoxContainer" parent="Lab_Options/ScreenBox"]
layout_mode = 2
alignment = 1

[node name="FullScreen" type="CheckBox" parent="Lab_Options/ScreenBox/Checks"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Lab_Options/ScreenBox/Checks"]
layout_mode = 2

[node name="MusicaMenuOpciones" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jhupx")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 522.0
offset_right = 609.0
offset_bottom = 608.0
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_fecfv")
theme_override_font_sizes/font_size = 30
text = "BACK"
script = ExtResource("15_4movy")

[connection signal="value_changed" from="Lab_Options/AudioBox/VBoxContainer2/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Lab_Options/AudioBox/VBoxContainer2/Master" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Lab_Options/AudioBox/VBoxContainer2/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Lab_Options/AudioBox/VBoxContainer2/Music" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Lab_Options/AudioBox/VBoxContainer2/SoundFX" to="." method="_on_sound_fx_value_changed"]
[connection signal="value_changed" from="Lab_Options/AudioBox/VBoxContainer2/SoundFX" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="Lab_Options/ScreenBox/Checks/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Lab_Options/ScreenBox/Checks/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
